--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.12.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-scripts": "^4.0.3",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
