--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-proxy-middleware": "^2.0.0",
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
