--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
+    "connect-mongo": "^4.4.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "http-proxy-middleware": "^2.0.0",
