--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.6",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
