fixing API again by moving to backend

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://duckboy:Duckboy85!@cluster0.fgjnj.mongodb.net/MONGODB?retryWrites=true&w=majority
 secret=ewdtfghbjm
+arstyClientID=5b7eb2568e3b3f888f85
+artsyClientSecret=7941b6cc8fec588390fdb67abdc32930
