--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.6",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-redux": "^7.2.4",
@@ -26,6 +27,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "simple-color-picker": "^1.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
